--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
 "globals": {
-				"speedUp": 32.0,
+				"speedUp": 1.0,
 				"updateInterval": 1.0,
 				"autoConfirm": true,
-				"useLCD": false,
+				"useLCD": true,
 				"useTTY": true,
 				"useBeep": false,
-				"confirmHWButtons": false,
-				"confirmTTYKeyboard": true,
-				"runAsSimulation": true,
-				"useIPCheck": false
+				"confirmHWButtons": true,
+				"confirmTTYKeyboard": false,
+				"runAsSimulation": false,
+				"useIPCheck": true 
 		   },
 "brewSetup": {
 				"useCirculationPump": true,
@@ -21,17 +21,17 @@
 			},
 "raspibrew": { 
 				"useLCD": false,
-				"runDirPrefix": "",
+				"runDirPrefix": "/",
 				"controller": [{},
 							{ 	"sensorId": "10.1AE63B020800", 
-								"sensorType":"simulated", 
+								"sensorType":"1w", 
 								"pin": 17,
 								"dTHm": 1.5,
 								"dTCm": 0.78,
 								"waterTemp": 10.0
 							},
 							{ 	"sensorId": "28.F2AC88040000",
-								"sensorType": "simulated",
+								"sensorType": "1w",
 								"pin": 23,
 								"dTHm": 0,
 								"dTCm": 0,
