Controller REST interface now use Fahrenheit again, making it compatible with the "original" RasPiBrew REST interface. Handles unit conversion now on UI / recipe level.

--- a/config.json
+++ b/config.json
@@ -9,7 +9,9 @@
 				"confirmHWButtons": true,
 				"confirmTTYKeyboard": false,
 				"runAsSimulation": false,
-				"useIPCheck": true
+				"useIPCheck": false,
+				"displayUnit": "C",
+				"recipeUnit" : "C"
 		   },
 "brewSetup": {
 				"useCirculationPump": true,
