Made LCD simulation working properly, can now be use without real hardware using lcdSimulation = true

--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
 				"updateInterval": 1.0,
 				"autoConfirm": false,
 				"useLCD": true,
+				"lcdSimulation": false,
 				"useTTY": false,
 				"useBeep": true,
 				"confirmHWButtons": true,
