Changed layout of LCD Added  time to LCD formatting routine which produces fixed size output for any duration

--- a/config-pcsimulation.json
+++ b/config-pcsimulation.json
@@ -2,7 +2,7 @@
 "globals": {
 				"speedUp": 32.0,
 				"updateInterval": 1.0,
-				"autoConfirm": true,
+				"autoConfirm": false,
 				"useLCD": true,
 				"lcdSimulation": true,
 				"useTTY": true,
